test/invalidwiki/Страница 1/Страница 2/__page.opt
[General]
tags = test
type = text
datetime = 2017-02-28 13:53:27.973897

[Section1]
param1 = абырвалг_1
param2 = 666

